--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
